crates/iota/tests/snapshots/ptb_files_tests__type_param_resolution.ptb.snap
---
source: crates/iota/tests/ptb_files_tests.rs
expression: "results.join(\"\\n\")"
---
 === PREVIEW === 
╭───────────────────────────────────────────────────────────────╮
│ PTB Preview                                                   │
├──────────────────┬────────────────────────────────────────────┤
│ command          │ values                                     │
├──────────────────┼────────────────────────────────────────────┤
│ move-call        │ 0x2::table::new<address, u64>              │
│ assign           │ table                                      │
│ move-call        │ 0x2::table::add<address, u64> table @0x2 0 │
│ transfer-objects │ [table] @0x0                               │
╰──────────────────┴────────────────────────────────────────────╯
 === BUILT PTB === 
Input 0: Pure([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2])
Input 1: Pure([0, 0, 0, 0, 0, 0, 0, 0])
Input 2: Pure([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0])
Command 0: Command: Move Call
├── Package: 0x0000000000000000000000000000000000000000000000000000000000000002
├── Module: table
├── Function: new
├── Type Arguments
│   ├── 0: address
│   └── 1: u64
└── Arguments: []
Command 1: Command: Move Call
├── Package: 0x0000000000000000000000000000000000000000000000000000000000000002
├── Module: table
├── Function: add
├── Type Arguments
│   ├── 0: address
│   └── 1: u64
└── Arguments
    ├── 0: Result(0)
    ├── 1: Input(0)
    └── 2: Input(1)
Command 2: Command: Transfer Objects
├── Objects
│   └── 0: Result(0)
└── Address: Input(2)
