crates/iota/tests/snapshots/ptb_files_tests__valid_gas.ptb.snap
---
source: crates/iota/tests/ptb_files_tests.rs
expression: "results.join(\"\\n\")"
---
 === PREVIEW === 
╭─────────────────────╮
│ PTB Preview         │
├────────────┬────────┤
│ command    │ values │
├────────────┼────────┤
│ gas-budget │ 110000 │
╰────────────┴────────╯
 === BUILT PTB === 
