crates/iota/tests/snapshots/ptb_files_tests__variable_resolution_fixing.ptb.snap
---
source: crates/iota/tests/ptb_files_tests.rs
expression: "results.join(\"\\n\")"
---
 === PREVIEW === 
╭───────────────────────────────────────────────────────╮
│ PTB Preview                                           │
├───────────────┬───────────────────────────────────────┤
│ command       │ values                                │
├───────────────┼───────────────────────────────────────┤
│ assign        │ s @0x1                                │
│ move-call     │ iota::coin::value<iota::iota::IOTA> s │
│ make-move-vec │ <address> [s]                         │
╰───────────────┴───────────────────────────────────────╯
 === BUILT PTB === 
Input 0: ImmutableOrOwnedObject
Command 0: Command: Move Call
├── Package: 0x0000000000000000000000000000000000000000000000000000000000000002
├── Module: coin
├── Function: value
├── Type Arguments
│   └── 0: 0x2::iota::IOTA
└── Arguments
    └── 0: Input(0)
Command 1: Command: Make Move Vector
├── Type Tag: address
└── Elements
    └── 0: Input(0)
