crates/iota/tests/snapshots/ptb_files_tests__variable_shadowing.ptb.snap
---
source: crates/iota/tests/ptb_files_tests.rs
expression: "results.join(\"\\n\")"
---
 === PREVIEW === 
╭──────────────────────────────────────────────────────────────╮
│ PTB Preview                                                  │
├───────────────┬──────────────────────────────────────────────┤
│ command       │ values                                       │
├───────────────┼──────────────────────────────────────────────┤
│ assign        │ s @0x1                                       │
│ move-call     │ iota::coin::destroy_zero<iota::iota::IOTA> s │
│ assign        │ s @0x2                                       │
│ make-move-vec │ <address> [s]                                │
╰───────────────┴──────────────────────────────────────────────╯
 === BUILT PTB === 
Input 0: ImmutableOrOwnedObject
Input 1: Pure([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2])
Command 0: Command: Move Call
├── Package: 0x0000000000000000000000000000000000000000000000000000000000000002
├── Module: coin
├── Function: destroy_zero
├── Type Arguments
│   └── 0: 0x2::iota::IOTA
└── Arguments
    └── 0: Input(0)
Command 1: Command: Make Move Vector
├── Type: address
└── Elements
    └── 0: Input(1)
