crates/iota/tests/snapshots/ptb_files_tests__whitespace_handling.ptb.snap
---
source: crates/iota/tests/ptb_files_tests.rs
expression: "results.join(\"\\n\")"
---
 === PREVIEW === 
╭──────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│ PTB Preview                                                                                              │
├───────────────┬──────────────────────────────────────────────────────────────────────────────────────────┤
│ command       │ values                                                                                   │
├───────────────┼──────────────────────────────────────────────────────────────────────────────────────────┤
│ assign        │ x vector[1, 2, 3, 4]                                                                     │
│ assign        │ x vector[1, 2, 3, 4]                                                                     │
│ assign        │ x vector["1", "2,       3", "", "4                        "]                             │
│ assign        │ x vector["1", "2,       3", "", "4                       \n            "]                │
│ make-move-vec │ <u16> [1, 2, 3, 4]                                                                       │
│ make-move-vec │ <iota::string::String> [1, 2, 3, 4]                                                      │
│ make-move-vec │ <iota::string::String> ["1", "2,       3", "", "4                        "]              │
│ make-move-vec │ <iota::string::String> ["1", "2,       3", "", "4                       \n            "] │
╰───────────────┴──────────────────────────────────────────────────────────────────────────────────────────╯
 === BUILT PTB === 
Input 0: Pure([1, 0])
Input 1: Pure([2, 0])
Input 2: Pure([3, 0])
Input 3: Pure([4, 0])
Input 4: Pure([1, 0, 0, 0, 0, 0, 0, 0])
Input 5: Pure([2, 0, 0, 0, 0, 0, 0, 0])
Input 6: Pure([3, 0, 0, 0, 0, 0, 0, 0])
Input 7: Pure([4, 0, 0, 0, 0, 0, 0, 0])
Input 8: Pure([1, 49])
Input 9: Pure([10, 50, 44, 32, 32, 32, 32, 32, 32, 32, 51])
Input 10: Pure([0])
Input 11: Pure([25, 52, 32, 32, 32, 32, 32, 32, 32, 32, 32, 32, 32, 32, 32, 32, 32, 32, 32, 32, 32, 32, 32, 32, 32, 32])
Input 12: Pure([37, 52, 32, 32, 32, 32, 32, 32, 32, 32, 32, 32, 32, 32, 32, 32, 32, 32, 32, 32, 32, 32, 32, 32, 32, 10, 32, 32, 32, 32, 32, 32, 32, 32, 32, 32, 32, 32])
Command 0: Command: Make Move Vector
├── Type Tag: u16
└── Elements
    ├── 0: Input(0)
    ├── 1: Input(1)
    ├── 2: Input(2)
    └── 3: Input(3)
Command 1: Command: Make Move Vector
├── Type Tag: 0x2::string::String
└── Elements
    ├── 0: Input(4)
    ├── 1: Input(5)
    ├── 2: Input(6)
    └── 3: Input(7)
Command 2: Command: Make Move Vector
├── Type Tag: 0x2::string::String
└── Elements
    ├── 0: Input(8)
    ├── 1: Input(9)
    ├── 2: Input(10)
    └── 3: Input(11)
Command 3: Command: Make Move Vector
├── Type Tag: 0x2::string::String
└── Elements
    ├── 0: Input(8)
    ├── 1: Input(9)
    ├── 2: Input(10)
    └── 3: Input(12)
